--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
       <div id="about">
         <h3 class="text-uppercase text-center">About me</h3>
         <p class="py-2">
+          <a href="works/critoagragator.html">critoagragator</a>
+          <br>
           Quite often we hear people saying ”Nobody is perfect”, which is absolutely correct. But it is also true that nobody can stop you from making every effort to break this stereotype.
         </p>
         <p class="py-2">
