--- a/index.html
+++ b/index.html
@@ -110,9 +110,42 @@
       </div>
       <div id="about">
         <h3 class="text-uppercase text-center">About me</h3>
+        <div>
+          <h3>My works:</h3>
+          <ul class="d-flex flex-wrap">
+            <ol>
+              <a href="works/cryptoagregator/index.html" target="_blank">Cryto Agregator (Backend)</a>
+              <ul>
+                <li>Django</li>
+                <li>Django REST Framework</li>
+                <li>Django oauth toolkit</li>
+                <li>CRUD</li>
+              </ul>
+            </ol>
+            <ol>
+              <a href="http://u169.pythonanywhere.com/" target="_blank">Tatto Master (Frontend + Django)</a>
+              <ul>
+                <li>HTML5, CSS3</li>
+                <li>JavaScript</li>
+                <li>Bootstrap 4</li>
+                <li>Slider</li>
+                <li>Animation</li>
+                <li>Responsive</li>
+              </ul>
+            </ol>
+            <ol>
+              <a href="http://ku113p.pythonanywhere.com/" target="_blank">Blog Template (Backend)</a>
+              <ul>
+                <li>Flask</li>
+                <li>SQLAlchemy</li>
+                <li>Bootstrap template</li>
+                <li>Simple administration</li>
+                <li>Responsive</li>
+              </ul>
+            </ol>
+          </ul>
+        </div>
         <p class="py-2">
-          <a href="works/critoagragator.html">critoagragator</a>
-          <br>
           Quite often we hear people saying ”Nobody is perfect”, which is absolutely correct. But it is also true that nobody can stop you from making every effort to break this stereotype.
         </p>
         <p class="py-2">
