--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
           <h3>My works:</h3>
           <ul class="d-flex flex-wrap">
             <ol>
-              <a href="works/cryptoagregator/index.html" target="_blank">Cryto Agregator (Backend)</a>
+              <a href="http://caru.pythonanywhere.com/cry/index/" target="_blank">Cryto Agregator (Backend + Vue.js)</a>
               <ul>
+                <li>Vue.js</li>
                 <li>Django</li>
                 <li>Django REST Framework</li>
                 <li>Django oauth toolkit</li>
