--- a/index.html
+++ b/index.html
@@ -114,13 +114,12 @@
           <h3>My works:</h3>
           <ul class="d-flex flex-wrap">
             <ol>
-              <a href="http://caru.pythonanywhere.com/cry/index/" target="_blank">Cryto Agregator (Backend + Vue.js)</a>
+              <a href="projects/template1/index.html" target="_blank">Full Responsive Site For Company</a>
               <ul>
-                <li>Vue.js</li>
-                <li>Django</li>
-                <li>Django REST Framework</li>
-                <li>Django oauth toolkit</li>
-                <li>CRUD</li>
+                <li>HTML5, CSS3</li>
+                <li>Bootstrap 4</li>
+                <li>Button Animation</li>
+                <li>Full Responsive</li>
               </ul>
             </ol>
             <ol>
