--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                 <li>Bootstrap 4</li>
                 <li>Button Animation</li>
                 <li>Full Responsive</li>
+                <li>Gulp</li>
+                <li>Pug</li>
+                <li>Sass</li>
               </ul>
             </ol>
             <ol>
