--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Vue.js_Logo.svg" height="100px" alt="Vue.js">
               </div>
               <div class="skill m-2">
-                <img src="http://www.seeicons.com/images/iconstore/512/seeicons__57e90b703eba6.png" height="100px" alt="BS4">
+                <img src="https://cdn-images-1.medium.com/max/1600/1*lduEjOI-EQltoRbmKSICeA.jpeg" height="100px" alt="BS4">
               </div>
               <div class="skill m-2">
                  <img src="http://chittagongit.com//images/jquery-icon-png/jquery-icon-png-2.jpg" height="100px" alt="JQuery">
