--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="http://icons.iconarchive.com/icons/graphics-vibe/developer/256/ajax-icon.png" height="100px" alt="AJAX">
               </div>
               <div class="skill m-2 active">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Vue.js_Logo.svg" height="100px" alt="Vue.js">
+                <img src="https://cdn-images-1.medium.com/max/800/1*wqYF-8Dmh7LhtLkKfERc3Q.png" height="100px" alt="Vue.js">
               </div>
               <div class="skill m-2">
                 <img src="https://cdn-images-1.medium.com/max/1600/1*lduEjOI-EQltoRbmKSICeA.jpeg" height="100px" alt="BS4">
