--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
       <div id="about">
         <h3 class="text-uppercase text-center">About me</h3>
         <div>
-          <h3>My works:</h3>
+          <h3>My best works:</h3>
           <ul class="d-flex flex-wrap">
             <ol>
-              <a href="projects/template1/index.html" target="_blank">Full Responsive Site For Company</a>
+              <h4>Full Responsive Site For Company</h4>
               <ul>
                 <li>HTML5, CSS3</li>
                 <li>Bootstrap 4</li>
@@ -125,8 +125,8 @@
                 <li>Sass</li>
               </ul>
             </ol>
-            <!--<ol>
-              <a href="http://u169.pythonanywhere.com/" target="_blank">Tatto Master (Frontend + Django)</a>
+            <ol>
+              <h4>Tatto Master (Frontend + Django)</h4>
               <ul>
                 <li>HTML5, CSS3</li>
                 <li>JavaScript</li>
@@ -135,9 +135,9 @@
                 <li>Animation</li>
                 <li>Responsive</li>
               </ul>
-            </ol>-->
+            </ol>
             <ol>
-              <a href="http://ku113p.pythonanywhere.com/" target="_blank">Blog Template (Backend)</a>
+              <h4>Blog Template (Backend)</h4>
               <ul>
                 <li>Flask</li>
                 <li>SQLAlchemy</li>
@@ -173,11 +173,7 @@
           </div>
           <div class="contact tel d-flex justify-content-between">
             <b>Tel:</b>
-            <span>8-985-526-19-22</span>
-          </div>
-          <div class="contact facebook d-flex justify-content-between">
-            <b>VK:</b>
-            <span><a href="https://vk.com/ratsionalist">ratsionalist</a></span>
+            <span>(+7 985) 5261922</span>
           </div>
         </div>
       </div>
