--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h3 class="text-uppercase text-center">About me</h3>
         <div>
           <h3>My best works:</h3>
-          <ul class="d-flex flex-wrap">
+          <ul class="d-flex">
             <ol>
               <h4>Full Responsive Site For Company</h4>
               <ul>
